#90 Fix check for Follower when not logged in and Remove follow visibility on own profile

--- a/frontend/src/components/Post/Post.scss
+++ b/frontend/src/components/Post/Post.scss
@@ -9,79 +9,84 @@
 
   height: 620px;
   width: 970px;
-}
 
-h1 {
-  text-align: center;
-}
-
-.image-wrapper {
-  padding: none;
-  img {
-    width: 620px;
-    height: 100%;
-    object-fit: contain; // fit picture instead of stretching it
+  h1 {
+    text-align: center;
   }
-}
-
-.text-wrapper {
-  display: flex;
-  flex-flow: column nowrap;
-  word-wrap: break-word;
   
-  background: black;
-  height: 100%;
-  width: 350px;
-
-  position: relative;
-  .comment-form-div {
-    position: absolute;
-    width: 100%;
-    bottom: 0px;
+  .image-wrapper {
+    padding: none;
+    img {
+      width: 620px;
+      height: 100%;
+      object-fit: contain; // fit picture instead of stretching it
+    }
   }
-}
-
-.comments {
-  overflow-y: auto;
-}
-
-.post-description {
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: space-between;
-  box-sizing: border-box;
-
-  background: black;
-  color: white;
-  border-bottom: solid 1px #a9a9a9;
-
-  min-height: 100px;
-  height: 100px;
-  width: 350px;
-
-  padding: 20px;
-
-  a {
+  
+  .text-wrapper {
+    display: flex;
+    flex-flow: column nowrap;
+    word-wrap: break-word;
+    
+    background: black;
+    height: 100%;
+    width: 350px;
+  
+    position: relative;
+    .comment-form-div {
+      position: absolute;
+      width: 100%;
+      bottom: 0px;
+    }
+  }
+  
+  .comments {
+    overflow-y: auto;
+  }
+  
+  .post-description {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    box-sizing: border-box;
+  
+    background: black;
     color: white;
-    text-decoration: none;
-    font-weight: bold;
-    font-size: $h6-fontsize;
+    border-bottom: solid 1px #a9a9a9;
+  
+    min-height: 100px;
+    height: 100px;
+    width: 350px;
+  
+    padding: 20px;
+  
+    a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+      font-size: $h6-fontsize;
+    }
   }
-}
-
-//Scrollbar
-div.comments {
-  &::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  background-color: #f5f5f5;
-  }
-
-  &::-webkit-scrollbar {
-    width: 6px;
+  
+  //Scrollbar
+  div.comments {
+    &::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     background-color: #f5f5f5;
+    }
+  
+    &::-webkit-scrollbar {
+      width: 6px;
+      background-color: #f5f5f5;
+    }
+  
+    &::-webkit-scrollbar-thumb {
+      background-color: rgb(187, 167, 167);
+    }
   }
 
-  &::-webkit-scrollbar-thumb {
-    background-color: rgb(187, 167, 167);
+  .account-top{
+    display: flex;
+    flex-flow: row nowrap;
   }
 }
